1999-03-13  Mark Kettenis  <kettenis@gnu.org>

	* users.c (po_destroy_hook): Only reset state and hardware if
	TTY_OPEN bit is set in TERMFLAGS.

Mon Mar  1 09:11:06 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* munge.c (output_width): If C is a tab, then the width is the
	offset from LOC, not the total final position of the tab.
	Reported by Kalle Olavi Niemitalo <tosi@ees2.oulu.fi).

1999-02-28  Roland McGrath  <roland@baalperazim.frob.com>

	* users.c (trivfs_S_io_revoke): Use ports_class_iterate.

Mon Feb 22 04:34:55 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* users.c (trivfs_S_io_revoke): Protect the revocation by blocking
	all other rpcs.

Sat Feb 20 04:59:15 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* users.c (trivfs_S_io_revoke): Release global_lock before
	beginning the iteration.

	* users.c (trivfs_S_io_revoke): Add reply, reply_type args.

1999-02-06  Mark Kettenis  <kettenis@gnu.org>

	* main.c (main): Initialize status from underlying node.
	* users.c (check_access_hook): New function.  Correctly implement
	access permission checking.
	(trivfs_check_access_hook): Initialize with check_access_hook.
	(trivfs_S_file_check_access): Removed.

Thu Feb 18 00:57:30 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* devio.c (devio_assert_dtr): Bother to set open_pending.
	Reported by OKUJI Yoshinori (okuji@kuicr.kyoto-u.ac.jp).

1999-02-16  Roland McGrath  <roland@baalperazim.frob.com>

	* users.c (trivfs_S_io_revoke): Fix typos.

Tue Feb 16 06:10:08 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* users.c (trivfs_S_io_revoke): New function.

1999-02-05  Mark Kettenis  <kettenis@gnu.org>

	* users.c (trivfs_S_file_chmod): Clear S_ISVTX bit instead of
	clearing all other bits.

Sat Jan 30 00:27:14 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* munge.c (create_queue): Make sure that malloc succeeds.
	Reported by OKUJI Yoshinori <okuji@kuicr.kyoto-u.ac.jp>.

1998-10-24  Roland McGrath  <roland@baalperazim.frob.com>
